# django-maast

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  maast.sqlite3  manage.py  pyproject.toml
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py  0002_alter_siteupdateblog_options.py
blog/templates/: site_updates.html
maast/: apps.py  models.py  sitemaps.py  urls.py  views.py
maast/services/: group_and_sort.py  http_client.py  parse_date.py
maast/templates/: _base.html  _footer.html  _header.html  event_list.html  faq.html  home.html  modal.html  organizations.html  person_profile.html  privacy_policy.html  records_by_round.html  scores_by_event.html  scores_by_round_and_division.html  terms_of_use.html
maast/views/: events.py  home.py  organizations.py  persons.py  records.py  redirects.py  scores.py  static_pages.py
maast_web/: asgi.py  settings.py  urls.py  wsgi.py
pages/: urls.py  views.py
pages/templates/: age_divisions.html  details.html  equipment_classes.html  faq.html  help.html  privacy_policy.html  rounds.html  terms_of_use.html  test.html
static/css/: styles.css
static/js/: profilePage.js
static_nonversioned/: site.webmanifest
staticfiles/: staticfiles.json
staticfiles/js/: archerSearch.127db97daafa.js  navbar.2e97ab79d290.js  profilePage.bd1594a7f701.js
theme/static_src/: tailwind.config.js
