[tool.poetry]
name = "django-maast"
version = "0.2.0"
description = "A Django front-end for the MAAST API."
authors = ["Tim Wilson <tim@timwilson.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
httpx = "^0.25.2"
python-decouple = "^3.8"
pydantic = "^2.5.2"
django-meta = "^2.4.1"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
django-tailwind = {extras = ["reload"], version = "^3.6.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
